--- a/SwarSadhana.html
+++ b/SwarSadhana.html
@@ -56,10 +56,12 @@
 
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://www.youtube.com/c/subhashphadke/videos">Subscribe on Youtube</a>
+                    <a class="nav-link" target="_blank" href="https://www.youtube.com/c/subhashphadke/videos">Subscribe
+                        on Youtube</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://www.facebook.com/Swar-Sadhana-Karaoke-Group-110442127340269">
+                    <a class="nav-link" target="_blank"
+                       href="https://www.facebook.com/Swar-Sadhana-Karaoke-Group-110442127340269">
                         Join us on Facebook</a>
                 </li>
             </ul>
@@ -69,6 +71,62 @@
     <div class="album py-5 bg-light">
         <div class="container">
             <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/s7N10WCVUAs"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 26</div>
+                            <div class="text-dark text-center">Yaadein</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SZp9_llaoRQ"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 25</div>
+                            <div class="text-dark text-center">25th Silver Jubilee Special</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7zW3njj92Fw"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 24</div>
+                            <div class="text-dark text-center">Various Locations</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Jh03GQYT-i0"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 23</div>
+                            <div class="text-dark text-center">Meaningless Lyrics Theme</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -93,62 +151,6 @@
                             <p class="card-text">
                             <div class="text-primary text-center">Episode: 21</div>
                             <div class="text-dark text-center">Rangbhare Gaane</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Jz9m-UIT_rY"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 20</div>
-                            <div class="text-dark text-center">Film Ke Naam Gaano Ke Saath</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zIkuCi6DUDo"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 19</div>
-                            <div class="text-dark text-center">Bilingual Language Hindi Songs</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H3vfi2zjBII"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 18</div>
-                            <div class="text-dark text-center">Valentines Day - Ched Chhaad!</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oBCNhwQZl30"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 17</div>
-                            <div class="text-dark text-center">Songs on Vehicles</div>
                             </p>
                         </div>
                     </div>
