--- a/SwarSadhana.html
+++ b/SwarSadhana.html
@@ -74,6 +74,20 @@
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M5d7DE6LZpE"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 27</div>
+                            <div class="text-dark text-center">Bollywood Hits Of 70s</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/s7N10WCVUAs"
                                     allowfullscreen></iframe>
                         </div>
@@ -141,20 +155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lEye8NNt_sY"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 21</div>
-                            <div class="text-dark text-center">Rangbhare Gaane</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
