Updated with episodes 28-32

--- a/SwarSadhana.html
+++ b/SwarSadhana.html
@@ -74,6 +74,76 @@
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow">
                         <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0ouABFDf74E"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 32</div>
+                            <div class="text-dark text-center">Josh!!</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JvBZ3xueh7I"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 31</div>
+                            <div class="text-dark text-center">Festivals Songs</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PZ_UQtBaPFo"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 30</div>
+                            <div class="text-dark text-center">80's Bollywood</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/okOnFdRBrHA"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 29</div>
+                            <div class="text-dark text-center">Ulta Pulta</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0-u4TnI1LEQ"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">
+                            <div class="text-primary text-center">Episode: 28</div>
+                            <div class="text-dark text-center">Mousam - e - Barish</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M5d7DE6LZpE"
                                     allowfullscreen></iframe>
                         </div>
@@ -85,77 +155,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/s7N10WCVUAs"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 26</div>
-                            <div class="text-dark text-center">Yaadein</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SZp9_llaoRQ"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 25</div>
-                            <div class="text-dark text-center">25th Silver Jubilee Special</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7zW3njj92Fw"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 24</div>
-                            <div class="text-dark text-center">Various Locations</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Jh03GQYT-i0"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 23</div>
-                            <div class="text-dark text-center">Meaningless Lyrics Theme</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/F3-Yjp-Yyh4"
-                                    allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">
-                            <div class="text-primary text-center">Episode: 22</div>
-                            <div class="text-dark text-center">Manpasand 90s Romantic Songs</div>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
@@ -183,4 +182,3 @@
 
 </body>
 </html>
-
