Interim Birthday Changes - 2023

--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
 
 <body>
 
-<div class="container">
-  <div class="row">
-    <div class="span4"></div>
-    <div class="span4"><img class="mx-auto d-block" src="resources/BirthdayImage.jpeg" /></div>
-    <div class="span4"></div>
-  </div>
+<div>
+     <img class="img-fluid mx-auto d-block" src="resources/BirthdayImage.jpeg" /></div>
 </div>
 
 </body>
