--- a/index.html
+++ b/index.html
@@ -17,9 +17,116 @@
 
 <body>
 
-<div>
-     <img class="img-fluid mx-auto d-block" src="resources/BirthdayImage.jpeg" /></div>
-</div>
+<header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar">
+    <a class="navbar-brand mr-0 mr-md-2" href="/">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2">
+            <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+            <circle cx="12" cy="13" r="4"></circle>
+        </svg>
+    </a>
+
+    <div class="navbar-nav-scroll">
+        <ul class="navbar-nav bd-navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link active" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="SwarSadhana.html">SwarSadhana</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Art.html">Art</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Movies.html">Movies</a>
+            </li>
+        </ul>
+    </div>
+
+</header>
+
+
+<main role="main">
+
+    <section class="jumbotron text-dark">
+        <div class="row justify-content-start align-items-center">
+            <div class="col-2">
+                <img src="resources/Subhash-1.png" alt="" class="img-fluid">
+            </div>
+
+            <div class="col-8">
+                <h2 class="jumbotron-heading text-center">Subhash Phadke</h2>
+                <p class="lead">
+                <h5 class="text-center">Writer, Painter, Producer, Director, Singer, Grandfather</h5>
+                </p>
+            </div>
+
+            <div class="col-2">
+                <img src="resources/Subhash-2.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+
+    </section>
+
+    <div class="card-group">
+        <div class="card">
+            <a href="SwarSadhana.html">
+                <img class="card-img-top" src="resources/Music.jpg">
+            </a>
+            <div class="card-body">
+                <a href="SwarSadhana.html">
+                    <h5 class="card-title text-center">Swar Sadhana</h5>
+                </a>
+                <p class="card-text text-center">Checkout Our Karaoke Group Of Enthusiastic Singers</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <a href="Art.html">
+                <img class="card-img-top" src="resources/Art.jpg" href="Art.html">
+            </a>
+            <div class="card-body">
+                <a href="Art.html">
+                    <h5 class="card-title text-center">Art</h5>
+                </a>
+                <p class="card-text text-center">Browse Through My Art Collection</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <a href="Movies.html">
+                <img class="card-img-top" src="resources/Movies.jpg" href="Movies.html">
+            </a>
+            <div class="card-body">
+                <a href="Movies.html">
+                    <h5 class="card-title text-center">Movies</h5>
+                </a>
+                <p class="card-text text-center">My Movies</p>
+            </div>
+
+        </div>
+    </div>
+
+</main>
+
+<footer class="footer">
+    <div class="container">
+
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link text-primary" target="_blank" href="https://www.facebook.com/subhash.phadke.5/about">Facebook</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-primary" target="_blank" href="https://www.youtube.com/user/s220254">Youtube</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-primary" target="_blank"
+                   href="https://www.linkedin.com/in/subhash-phadke-26292737/">Linkedin</a>
+            </li>
+        </ul>
+
+    </div>
+</footer>
 
 </body>
 </html>
